@@ -16,11 +16,13 @@
  */
 package uk.ac.manchester.spinnaker.machine;
 
-import java.util.Arrays;
-import java.util.Collections;
+import static org.junit.jupiter.api.Assertions.*;
+import static uk.ac.manchester.spinnaker.machine.Direction.NORTH;
+import static uk.ac.manchester.spinnaker.machine.Direction.SOUTH;
+
 import java.util.List;
 import java.util.Set;
-import static org.junit.jupiter.api.Assertions.*;
+
 import org.junit.jupiter.api.Test;
 import static org.hamcrest.Matchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -36,132 +38,119 @@ public class TestRoutingEntry {
 
 	@Test
 	public void testBasic() {
-		List<Direction> directions =
-				Arrays.asList(Direction.NORTH, Direction.SOUTH);
-		List<Integer> ids = Arrays.asList(4, 6, 8);
-		RoutingEntry instance = new RoutingEntry(ids, directions);
+		var directions = List.of(NORTH, SOUTH);
+		var ids = List.of(4, 6, 8);
+		var instance = new RoutingEntry(ids, directions);
 
 		int code = instance.encode();
 
-		RoutingEntry decode = new RoutingEntry(code);
+		var decode = new RoutingEntry(code);
 		assertThat(decode.getLinkIDs(), contains(directions.toArray()));
 		assertThat(decode.getProcessorIDs(), contains(ids.toArray()));
 	}
 
 	@Test
 	public void testSingleId() {
-		List<Direction> directions =
-				Arrays.asList(Direction.NORTH, Direction.SOUTH);
-		List<Integer> ids = Arrays.asList(4);
-		RoutingEntry instance = new RoutingEntry(ids, directions);
+		var directions = List.of(NORTH, SOUTH);
+		var ids = List.of(4);
+		var instance = new RoutingEntry(ids, directions);
 		int code = instance.encode();
 
-		RoutingEntry decode = new RoutingEntry(code);
+		var decode = new RoutingEntry(code);
 		assertThat(decode.getLinkIDs(), contains(directions.toArray()));
 		assertThat(decode.getProcessorIDs(), contains(ids.toArray()));
 	}
 
 	@Test
 	public void testEmptyId() {
-		List<Direction> directions =
-				Arrays.asList(Direction.NORTH, Direction.SOUTH);
-		List<Integer> ids = Collections.emptyList();
-		RoutingEntry instance = new RoutingEntry(ids, directions);
+		var directions = List.of(NORTH, SOUTH);
+		var instance = new RoutingEntry(List.of(), directions);
 		int code = instance.encode();
 
-		RoutingEntry decode = new RoutingEntry(code);
+		var decode = new RoutingEntry(code);
 		assertThat(decode.getLinkIDs(), contains(directions.toArray()));
 		assertEquals(0, decode.getProcessorIDs().size());
 	}
 
 	@Test
 	public void testNegative() {
-		List<Direction> directions =
-				Arrays.asList(Direction.NORTH, Direction.SOUTH);
-		List<Integer> ids = Arrays.asList(4, -66, 8);
+		var directions = List.of(NORTH, SOUTH);
+		var ids = List.of(4, -66, 8);
 		assertThrows(Exception.class, () -> {
 			@SuppressWarnings("unused")
-			RoutingEntry instance = new RoutingEntry(ids, directions);
+			var instance = new RoutingEntry(ids, directions);
 		});
 	}
 
 	@Test
 	public void testTooHighId() {
-		List<Direction> directions =
-				Arrays.asList(Direction.NORTH, Direction.SOUTH);
-		List<Integer> ids = Arrays.asList(4, 60, 8);
+		var directions = List.of(NORTH, SOUTH);
+		var ids = List.of(4, 60, 8);
 		assertThrows(Exception.class, () -> {
 			@SuppressWarnings("unused")
-			RoutingEntry instance = new RoutingEntry(ids, directions);
+			var instance = new RoutingEntry(ids, directions);
 		});
 	}
 
 	@Test
 	public void testOneDirection() {
-		List<Direction> directions = Arrays.asList(Direction.SOUTH);
-		List<Integer> ids = Arrays.asList(4, 6, 8);
-		RoutingEntry instance = new RoutingEntry(ids, directions);
+		var directions = List.of(SOUTH);
+		var ids = List.of(4, 6, 8);
+		var instance = new RoutingEntry(ids, directions);
 		int code = instance.encode();
 
-		RoutingEntry decode = new RoutingEntry(code);
-		assertThat(decode.getLinkIDs(), contains(Direction.SOUTH));
+		var decode = new RoutingEntry(code);
+		assertThat(decode.getLinkIDs(), contains(SOUTH));
 		assertThat(decode.getProcessorIDs(), contains(ids.toArray()));
 	}
 
 	@Test
 	public void testEmptyDirection() {
-		Set<Direction> directions = Collections.emptySet();
-		List<Integer> ids = Arrays.asList(4, 6, 8);
-		RoutingEntry instance = new RoutingEntry(ids, directions);
+		var ids = List.of(4, 6, 8);
+		var instance = new RoutingEntry(ids, Set.of());
 		int code = instance.encode();
 
-		RoutingEntry decode = new RoutingEntry(code);
+		var decode = new RoutingEntry(code);
 		assertEquals(0, decode.getLinkIDs().size());
 		assertThat(decode.getProcessorIDs(), contains(ids.toArray()));
 	}
 
 	@Test
 	public void testDoubleEmpty() {
-		List<Direction> directions = Collections.emptyList();
-		Set<Integer> ids = Collections.emptySet();
-		RoutingEntry instance = new RoutingEntry(ids, directions);
+		var instance = new RoutingEntry(Set.of(), List.of());
 		int code = instance.encode();
 
-		RoutingEntry decode = new RoutingEntry(code);
+		var decode = new RoutingEntry(code);
 		assertEquals(0, decode.getProcessorIDs().size());
 		assertEquals(0, decode.getLinkIDs().size());
 	}
 
 	@Test
 	public void testDouble() {
-		List<Direction> directions =
-				Arrays.asList(Direction.NORTH, Direction.SOUTH);
-		List<Integer> ids = Arrays.asList(4, 6, 8);
-		List<Direction> directions2 = Arrays.asList(Direction.NORTH,
-				Direction.SOUTH, Direction.SOUTH);
-		List<Integer> ids2 = Arrays.asList(4, 6, 8, 4);
-		RoutingEntry instance = new RoutingEntry(ids2, directions2);
+		var directions = List.of(NORTH, SOUTH);
+		var ids = List.of(4, 6, 8);
+		var directions2 = List.of(NORTH, SOUTH, SOUTH);
+		var ids2 = List.of(4, 6, 8, 4);
+		var instance = new RoutingEntry(ids2, directions2);
 
 		int code = instance.encode();
 
-		RoutingEntry decode = new RoutingEntry(code);
+		var decode = new RoutingEntry(code);
 		assertThat(decode.getLinkIDs(), contains(directions.toArray()));
 		assertThat(decode.getProcessorIDs(), contains(ids.toArray()));
 	}
 
 	@Test
 	public void testUnordered() {
-		List<Direction> directions =
-				Arrays.asList(Direction.NORTH, Direction.SOUTH);
-		List<Integer> ids = Arrays.asList(4, 6, 8);
-		List<Direction> directions2 =
-				Arrays.asList(Direction.SOUTH, Direction.NORTH);
-		List<Integer> ids2 = Arrays.asList(6, 4, 8);
-		RoutingEntry instance = new RoutingEntry(ids2, directions2);
+		var directions = List.of(NORTH, SOUTH);
+		var ids = List.of(4, 6, 8);
+		var directions2 = List.of(SOUTH, NORTH);
+		var ids2 = List.of(6, 4, 8);
+		var instance = new RoutingEntry(ids2, directions2);
 
 		int code = instance.encode();
 
-		RoutingEntry decode = new RoutingEntry(code);
+		var decode = new RoutingEntry(code);
 		assertThat(decode.getLinkIDs(), contains(directions.toArray()));
 		assertThat(decode.getProcessorIDs(), contains(ids.toArray()));
 	}
